--- a/package.json
+++ b/package.json
@@ -25,20 +25,23 @@
     "install": "npm run compile"
   },
   "devDependencies": {
-    "@mongodb-js/eslint-config-mongosh": "^1.0.0",
     "@mongodb-js/prettier-config-devtools": "^1.0.1",
-    "@mongodb-js/tsconfig-mongosh": "^1.0.0",
-    "@mongosh/browser-runtime-core": "0.0.0-dev.0",
-    "@mongosh/browser-runtime-electron": "0.0.0-dev.0",
-    "@mongosh/service-provider-core": "0.0.0-dev.0",
-    "@mongosh/service-provider-server": "0.0.0-dev.0",
-    "@mongosh/types": "0.0.0-dev.0",
+    "@mongosh/browser-runtime-core": "^2.2.10",
+    "@mongosh/browser-runtime-electron": "^2.2.10",
+    "@mongosh/service-provider-core": "^2.2.10",
+    "@mongosh/service-provider-server": "^2.2.10",
+    "@mongosh/types": "^2.2.10",
     "bson": "^6.7.0",
     "depcheck": "^1.4.3",
     "eslint": "^7.25.0",
     "mocha": "^10.2.0",
     "postmsg-rpc": "^2.4.0",
     "prettier": "^2.8.8",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.3",
+    "webpack": "^5.92.1",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
